[tool.poetry]
name = "posthub"
version = "0.1.0"
description = ""
authors = ["md <marceldiomare@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=3.2,<4.0"
djangorestframework = ">=3.12,<4.0"
psycopg2-binary = ">=2.9,<3.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
